applications/webhook/webhook.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webhook
---
apiVersion: v1
kind: Service
metadata:
  name: webhook
  namespace: webhook
spec:
  ports:
    - port: 80
      targetPort: 3002
# ---
# apiVersion: v1
# kind: Endpoints
# metadata:
#   name: webhook
#   namespace: webhook
# subsets:
#   - addresses:
#       - ip: "192.168.2.249"
#     ports:
#       - port: 3002
